Fri Jan 19 17:22:24 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* GNUmakefile: Added RPM_DISABLE_RELOCATABLE and
	PACKAGE_NEEDS_CONFIGURE.
	* gnustep-gui.spec.in, gnustep-gui-debug.spec.in: New files.
	* gnustep-gui.spec: Removed.

Wed Jan 17 19:51:57 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTableHeaderView.m ([-mouseDown:]): Fixed bug in
	resizing (patch by Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
	slightly modified).

Tue Jan 16 12:01:28 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSApplication.m (_NSAppKitUncaughtExceptionHandler):
	Fixed logging exception when no graphics context exist.

Tue Jan 16 11:54:30 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSAffineTransform.m ([-takeMatrixFromTransform:]): New
	method to get quickly the matrix from another transform.
	* Headers/gnustep/gui/NSAffineTransform.h: Added corresponding
	declaration.
	* Source/NSView.m ([-_rebuildCoordinates]): Use it to spare a
	couple of method calls per invocation.

	* Source/NSBrowser.m ([-pathToColumn:]): Bug fix - stop computing
	path as soon as a column with no selected cells in it is found.
	
	* Headers/gnustep/gui/NSClipView.h: Added ivar to cache whether we
	are opaque or not.
	* Source/NSClipView.m ([-isOpaque]): Returne cached info.
	([-setDrawsBackground:]), ([-setBackgroundColor:]): Update opaque
	cache info.

	* Source/NSClipView.m ([-setDocumentView:]): As a safety check,
	update _rFlags.flipped_view before setting the bounds.
	([-setBoundsOrigin:]): Use [self documentVisibleRect] to get the
	document view area to be redrawn when redrawing everything.
	* Source/NSScrollView.m ([-tile]): Removed reflectScrolledClipView
	call in excess.
	* Source/NSView.m ([-_rebuildCoordinates]): Use _frame.height, not
	_bounds.height when flipping coordinates.

	* Source/NSView.m: Cache the default notification center for
        the whole class.

	* Source/NSView.m ([-resizeWithOldSuperviewSize:]): Bug fix -