@@ -1,3 +1,8 @@
+2001-01-20  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSLayoutManager.m: Reorganize and tidy up glyph code
+	in preparation for handling gaps in the glyh stream.
+
 Fri Jan 19 17:22:24 2001  Nicola Pero  <nicola@brainstorm.co.uk>
 
 	* GNUmakefile: Added RPM_DISABLE_RELOCATABLE and
